# Choreo-mini

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug_convert.py  functional_test.py  manual_cli.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
choreo-mini/core/: nodes.py  workflow.py
choreo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
choreo_mini/: __init__.py  cli.py
choreo_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
choreo_mini/core/: ast_parser.py  llm.py  nodes.py  workflow.py
choreo_mini/templates/autogen/: workflow.j2
choreo_mini/templates/crewai/: workflow.j2
choreo_mini/templates/langgraph/: workflow.j2
examples/: foo.py  foo2.py
output/: autogen_output.py  autogen_output_1.py  crewai_output.py  langgraph_output_2.py  langgraph_output_final.py  langgraph_output_final2.py  langgraph_output_test.py  langgraph_output_test2.py
tests/: test_autogen_conversion.py  test_backend_templates.py  test_crewai_conversion.py  test_langgraph_conversion.py
